// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of agri/csv 1`] = `
Array [
  "budget.eu_contrib",
  "budget.eu_contrib",
  "budget.funding_area",
  "budget",
  "description",
  "ec_priorities",
  "media.0",
  "media.0",
  "media.0.meta",
  "programme_name",
  "project_id",
  "project_locations.0",
  "project_locations.0.centroid",
  "project_locations.0.centroid",
  "project_locations.0.location",
  "project_locations.0.location.coordinates",
  "project_locations.0.location.coordinates",
  "results",
  "third_parties.0",
  "third_parties.0",
  "timeframe",
  "timeframe",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of budg/xls 1`] = `
Array [
  "action",
  "budget.eu_contrib",
  "budget.eu_contrib",
  "call_year",
  "description",
  "programme_name",
  "project_id",
  "project_locations.0",
  "project_locations.1",
  "project_locations.2",
  "project_locations.3",
  "project_locations.4",
  "project_locations.5",
  "project_locations.6",
  "project_locations.7",
  "project_locations.8",
  "project_locations.9",
  "project_locations.10",
  "project_locations.11",
  "project_locations.12",
  "project_locations.13",
  "project_locations.14",
  "results",
  "results",
  "status",
  "sub_programme_name",
  "success_story",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.1",
  "third_parties.1",
  "third_parties.1",
  "third_parties.1",
  "third_parties.1",
  "third_parties.1",
  "third_parties.1",
  "third_parties.2",
  "third_parties.2",
  "third_parties.2",
  "third_parties.2",
  "third_parties.2",
  "third_parties.2",
  "third_parties.2",
  "third_parties.3",
  "third_parties.3",
  "third_parties.3",
  "third_parties.3",
  "third_parties.3",
  "third_parties.3",
  "third_parties.3",
  "third_parties.4",
  "third_parties.4",
  "third_parties.4",
  "third_parties.4",
  "third_parties.4",
  "third_parties.4",
  "third_parties.4",
  "third_parties.5",
  "third_parties.5",
  "third_parties.5",
  "third_parties.5",
  "third_parties.5",
  "third_parties.5",
  "third_parties.5",
  "third_parties.6",
  "third_parties.6",
  "third_parties.6",
  "third_parties.6",
  "third_parties.6",
  "third_parties.6",
  "third_parties.6",
  "third_parties.7",
  "third_parties.7",
  "third_parties.7",
  "third_parties.7",
  "third_parties.7",
  "third_parties.7",
  "third_parties.7",
  "third_parties.8",
  "third_parties.8",
  "third_parties.8",
  "third_parties.8",
  "third_parties.8",
  "third_parties.8",
  "third_parties.8",
  "third_parties.9",
  "third_parties.9",
  "third_parties.9",
  "third_parties.9",
  "third_parties.9",
  "third_parties.9",
  "third_parties.9",
  "third_parties.10",
  "third_parties.10",
  "third_parties.10",
  "third_parties.10",
  "third_parties.10",
  "third_parties.10",
  "third_parties.10",
  "third_parties.11",
  "third_parties.11",
  "third_parties.11",
  "third_parties.11",
  "third_parties.11",
  "third_parties.11",
  "third_parties.11",
  "third_parties.12",
  "third_parties.12",
  "third_parties.12",
  "third_parties.12",
  "third_parties.12",
  "third_parties.12",
  "third_parties.12",
  "third_parties.13",
  "third_parties.13",
  "third_parties.13",
  "third_parties.13",
  "third_parties.13",
  "third_parties.13",
  "third_parties.13",
  "third_parties.14",
  "third_parties.14",
  "third_parties.14",
  "third_parties.14",
  "third_parties.14",
  "third_parties.14",
  "third_parties.14",
  "third_parties.15",
  "third_parties.15",
  "third_parties.15",
  "third_parties.15",
  "third_parties.15",
  "third_parties.15",
  "third_parties.15",
  "third_parties.16",
  "third_parties.16",
  "third_parties.16",
  "third_parties.16",
  "third_parties.16",
  "third_parties.16",
  "third_parties.16",
  "timeframe",
  "timeframe",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of iati/csv 1`] = `
Array [
  "budget.eu_contrib",
  "budget.eu_contrib",
  "description",
  "project_id",
  "project_locations.0",
  "reporting_organisation",
  "timeframe",
  "timeframe",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of inforegio/json 1`] = `
Array [
  "budget.total_cost",
  "budget.total_cost",
  "budget.eu_contrib",
  "budget.eu_contrib",
  "budget.funding_area",
  "description",
  "period",
  "project_id",
  "project_locations.0",
  "project_locations.0",
  "project_locations.0.nuts.0",
  "project_locations.0.nuts.0",
  "project_website",
  "themes",
  "themes",
  "themes",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "timeframe",
  "timeframe",
  "title",
  "type",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of inforegio/xml 1`] = `
Array [
  "budget.total_cost",
  "budget.total_cost",
  "budget.eu_contrib",
  "budget.eu_contrib",
  "description",
  "period",
  "project_id",
  "project_locations.0",
  "project_locations.0",
  "project_locations.0.nuts.0",
  "project_website",
  "themes",
  "title",
  "type",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of valor/xls 1`] = `
Array [
  "budget.eu_contrib",
  "budget.eu_contrib",
  "call_year",
  "description",
  "programme_name",
  "project_id",
  "project_locations.0",
  "results",
  "results",
  "status",
  "success_story",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "third_parties.0",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of wifi4eu/xls 1`] = `
Array [
  "call_year",
  "description",
  "third_parties.0",
  "third_parties.0",
  "project_id",
  "project_locations.0",
  "project_locations.0",
  "project_locations.0",
  "project_locations.0",
  "project_website",
  "timeframe",
  "title",
]
`;
